[package]
name = "dummy-ln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.2"
lightning = { version = "0.0.113", features = ["max_level_trace"] }
lightning-background-processor = "0.0.113"
lightning-block-sync = { version = "0.0.113", features = ["rpc-client"] }
lightning-invoice = "0.21.0"
lightning-net-tokio = "0.0.113"
lightning-persister = "0.0.113"
lightning-rapid-gossip-sync = "0.0.113"
time = "0.3.17"
